- Fix layout with scrollbar. - Improve table layout.

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -3,6 +3,10 @@ a[mat-raised-button]:hover {
   text-decoration: none;
 }
 
+.center {
+  text-align: center;
+}
+
 .mat-card-title {
   margin-bottom: 30px !important;
 }
