--- a/frontend/src/app/modules/admin/jockey/jockey.component.css
+++ b/frontend/src/app/modules/admin/jockey/jockey.component.css
@@ -1,7 +1,3 @@
-.main-div {
-  height: 100vh;
-}
-
 table {
   width: 100%;
 }
@@ -11,6 +7,46 @@ button {
 }
 
 .picCol {
-  max-width: 200px;
-  max-height: 100px;
+  max-width: 256px;
+  max-height: 128px;
+}
+
+tr.example-detail-row {
+  height: 0;
+}
+
+tr.example-element-row:not(.example-expanded-row):hover {
+  background: whitesmoke;
+}
+
+tr.example-element-row:not(.example-expanded-row):active {
+  background: #efefef;
+}
+
+.example-element-row td {
+  border-bottom-width: 0;
+}
+
+.example-element-detail {
+  overflow: hidden;
+  display: flex;
+}
+
+.example-element-diagram {
+  font-weight: lighter;
+  margin: 0 20px 0 0;
+}
+
+.example-element-symbol {
+  font-weight: bold;
+  font-size: 40px;
+  line-height: normal;
+}
+
+.example-element-description {
+  padding: 16px 0;
+}
+
+.example-element-description-attribution {
+  opacity: 0.5;
 }
